// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnmatchButton renders correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FFFCFA",
      "borderColor": undefined,
      "borderRadius": 9999,
      "flexDirection": "row",
      "gap": 8,
      "height": 40,
      "justifyContent": "center",
      "minWidth": 128,
      "opacity": 1,
      "paddingLeft": 32,
      "paddingRight": 32,
    }
  }
>
  <Text
    allowFontScaling={false}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      [
        {
          "color": "#2B1911",
          "fontFamily": "Baloo2-Regular",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
        },
        [
          {
            "fontFamily": "Baloo2-SemiBold",
            "fontSize": 13,
            "letterSpacing": 0.47,
            "lineHeight": 22,
            "textTransform": "uppercase",
          },
          {
            "fontFamily": "Baloo2-SemiBold",
            "fontSize": 15,
            "letterSpacing": 0.54,
            "lineHeight": 26,
            "textTransform": "uppercase",
          },
          {
            "color": "#DF321F",
          },
        ],
        false,
      ]
    }
  >
    unmatch
  </Text>
  <test-file-stub
    fill="#DF321F"
    style={
      [
        {
          "height": 18,
          "width": 18,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`UnmatchButton should show the undo button if not yet matched 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
      "minWidth": 156,
    }
  }
>
  <View
    collapsable={false}
    style={
      {
        "alignSelf": "flex-start",
        "overflow": "hidden",
        "width": 156,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#FFFCFA",
          "borderColor": undefined,
          "borderRadius": 9999,
          "flexDirection": "row",
          "gap": 8,
          "height": 40,
          "justifyContent": "center",
          "minWidth": 128,
          "opacity": 1,
          "paddingLeft": 32,
          "paddingRight": 32,
          "width": 156,
        }
      }
    >
      <Text
        allowFontScaling={false}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          [
            {
              "color": "#2B1911",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            [
              {
                "fontFamily": "Baloo2-SemiBold",
                "fontSize": 13,
                "letterSpacing": 0.47,
                "lineHeight": 22,
                "textTransform": "uppercase",
              },
              {
                "fontFamily": "Baloo2-SemiBold",
                "fontSize": 15,
                "letterSpacing": 0.54,
                "lineHeight": 26,
                "textTransform": "uppercase",
              },
              {
                "color": "#2B1911",
              },
            ],
            false,
          ]
        }
      >
        undo
      </Text>
      <test-file-stub
        fill="#2B1911"
        style={
          [
            {
              "height": 18,
              "width": 18,
            },
            undefined,
          ]
        }
      />
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFCFA80",
        "borderColor": undefined,
        "borderRadius": 9999,
        "flexDirection": "row",
        "gap": 8,
        "height": 40,
        "justifyContent": "center",
        "minWidth": 128,
        "opacity": 1,
        "paddingLeft": 32,
        "paddingRight": 32,
        "position": "absolute",
        "width": 156,
      }
    }
  >
    <Text
      allowFontScaling={false}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "fontFamily": "Baloo2-SemiBold",
              "fontSize": 13,
              "letterSpacing": 0.47,
              "lineHeight": 22,
              "textTransform": "uppercase",
            },
            {
              "fontFamily": "Baloo2-SemiBold",
              "fontSize": 15,
              "letterSpacing": 0.54,
              "lineHeight": 26,
              "textTransform": "uppercase",
            },
            {
              "color": "#2B1911",
            },
          ],
          false,
        ]
      }
    >
      undo
    </Text>
    <test-file-stub
      fill="#2B1911"
      style={
        [
          {
            "height": 18,
            "width": 18,
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;
